--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 'testing actions'
-        run: pwd
+      - uses: actions/checkout@v3
+
+      - name: "login to docker hub"
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
  
